# api/swagger.yaml
@@ -27,7 +27,7 @@ paths:
                     type: string
                     example: API funcionando corretamente!
 
-  /testUser:
+  /userCreate:
     get:
       summary: Retorna a lista de usuários
       description: Faz uma consulta no banco de dados e retorna todos os usuários da tabela
@@ -89,7 +89,7 @@ paths:
         500:
           description: Erro ao criar o usuário
 
-  /testUser/{id}:
+  /userCreate/{id}:
     put:
       summary: Atualiza um usuário existente
       description: Atualiza os dados de um usuário na tabela de usuários
@@ -157,3 +157,65 @@ paths:
           description: Usuário não encontrado
         500:
           description: Erro ao deletar o usuário
+          
+  /auth/register:
+    post:
+      summary: Registra um novo usuário
+      description: Adiciona um novo usuário ao sistema
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                username:
+                  type: string
+                  example: exemplo
+                password:
+                  type: string
+                  example: senha123
+      responses:
+        201:
+          description: Usuário registrado com sucesso
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Usuário registrado com sucesso
+        400:
+          description: Usuário já existe
+
+  /auth/login:
+    post:
+      summary: Faz login de um usuário
+      description: Autentica um usuário e retorna um token
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                username:
+                  type: string
+                  example: exemplo
+                password:
+                  type: string
+                  example: senha123
+      responses:
+        200:
+          description: Login bem-sucedido
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  token:
+                    type: string
+                    example: seu_token_jwt
+        400:
+          description: Nome de usuário ou senha inválidos
